...
    case importantInfo /// 只收集重要的, 级别 大于 1的
    case all /// 全量收集
    
    var description : String{
        switch self {
        case .allDroped: return "不收集"
        case .importantInfo: return "只看重要的(级别大于 normal)"
        case .all: return "全部"
        }
    }
}
class ILogTool {
    var type : ILogReciveType {
...
